[project]
name = "export-dbt-docs-to-md"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "yutaro.ueno", email = "yutarofortech@gmail.com" }
]
dependencies = ["pydantic==1.10.7"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
[tool.hatch.metadata]
allow-direct-references = true
